src/layout/tests/snapshots/niri__layout__tests__golden__golden_v1_gesture_scroll_left.snap
---
source: src/layout/tests/golden.rs
expression: "snapshot([Op::AddOutput(1), win(1), win(2), win(3), Op::ViewOffsetGestureBegin\n{ output_idx: 1, workspace_idx: None, is_touchpad: true },\nOp::ViewOffsetGestureUpdate\n{ delta: -100., timestamp: Duration::from_millis(100), is_touchpad: true },\nOp::ViewOffsetGestureEnd { is_touchpad: Some(true) },\nOp::CompleteAnimations,])"
---
columns:
  - x: 0
    width: 100
    tiles:
      - x: 0
        y: 16
        width: 100
        height: 200
    active_tile_idx: 0
    is_full_width: false
    is_fullscreen: false
  - x: 116
    width: 100
    tiles:
      - x: 116
        y: 16
        width: 100
        height: 200
    active_tile_idx: 0
    is_full_width: false
    is_fullscreen: false
  - x: 232
    width: 100
    tiles:
      - x: 232
        y: 16
        width: 100
        height: 200
    active_tile_idx: 0
    is_full_width: false
    is_fullscreen: false
active_column_idx: 2
view_offset: -248
working_area:
  x: 0
  y: 0
  w: 1280
  h: 720
view_size:
  w: 1280
  h: 720