src/layout/tests/snapshots/niri__layout__tests__golden__golden_w3_focus_window_or_workspace_down.snap
---
source: src/layout/tests/golden.rs
expression: "snapshot([Op::AddOutput(1), win(1), win(2), consume_left(),\nOp::FocusWindowOrWorkspaceDown,])"
---
columns: []
active_column_idx: 0
view_offset: 0
working_area:
  x: 0
  y: 0
  w: 1280
  h: 720
view_size:
  w: 1280
  h: 720